# libgncm

./: gdhcp.doap  libgncm.doap  meson.build  meson_options.txt
doc/: gdhcp-docs.sgml  meson.build
doc/xml/: meson.build
examples/: dhcp-server-test.c  dhcp-server-test.py  dhcp-test  dhcp-test.c  dhcp-test.py
src/: libgncm.c  libgncm.h  meson.build  version.h.in
src/netconfig/: dns-config.c  dns-config.h  firewall-config.c  gncm_bridge.h  gncm_nameserver.c  gncm_nameserver.h  proxy-config.c
src/platform/: gncm-platform.c  gncm-platform.h
src/platform/linux/: gncm-linux-platform.c  gncm-linux-platform.h
tests/: meson.build
