# -*- meson -*-


# Performance and debugging related options
option('enable_profiling', type: 'boolean', value: false)

# Support for multiple programming languages
option('with_introspection', type: 'boolean', value: true)
option('with_vapi', type: 'boolean', value: true)

# Documentation
option('enable_gtk_doc', type: 'boolean', value: false,
       description: 'Whether to generate the API reference for gdhcp')

# Unit test
option('enable_tests', type: 'boolean', value: true,
       description: 'Whether to compile unit tests')
