# -*- meson -*-

# Support for multiple programming languages
option('with_introspection', type: 'boolean', value: true)
option('with_vapi', type: 'boolean', value: true)

# Documentation
option('enable_gtk_doc', type: 'boolean', value: false,
       description: 'Whether to generate the API reference for gdhcp')
