ent_conf = configuration_data()
ent_conf.set('PACKAGE', 'GNCM')
ent_conf.set('PACKAGE_BUGREPORT', 'https://github.com/fpemud/libgncm/issues')
ent_conf.set('PACKAGE_NAME', 'GNCM')
ent_conf.set('PACKAGE_STRING', 'gncm')
ent_conf.set('PACKAGE_TARNAME', 'gncm-' + meson.project_version())
ent_conf.set('PACKAGE_URL', 'https://github.com/fpemud/gncm')
ent_conf.set('PACKAGE_VERSION', meson.project_version())
ent_conf.set('PACKAGE_API_VERSION', apiversion)
configure_file(input: 'gtkdocentities.ent.in', output: 'gtkdocentities.ent', configuration: ent_conf)

